[package]
authors = ["Samuel Laurén <samuel.lauren@iki.fi>"]
name = "three"
description = "Game about patterns"
readme = "README.md"
version = "0.1.0"
license = "GPL-3.0"

[dependencies]
cairo-rs = "0.1.1"
gdk = "0.5.1"
gdk-sys = "0.3.2"
gio = "0.1.1"
itertools = "0.5.9"
slog = "1.5.2"
slog-term = "1.5.0"

[dependencies.gtk]
features = ["v3_16"]
version = "0.1.1"
